<resources>
    <!--    <string name="app_name">AppStore</string>-->
    <string name="mine_str">我的</string>
    <string name="recommend_str">推荐</string>
    <string name="classify_str">分类</string>
    <string name="manage_str">管理</string>
    <string name="search_hint_str">搜索应用</string>

    <string name="type_str">类别</string>
    <string name="app_size_str">大小</string>
    <string name="app_version_str">版本</string>
    <string name="app_update_str">更新</string>
    <string name="app_belong_str">归属</string>
    <string name="update_daily_str">更新日志</string>
    <string name="app_describe_str">应用描述</string>
    <string name="build_info_str">建设信息</string>
    <string name="range_of_str">使用                     范围</string>
    <string name="app_belong_land_str">应用归属地</string>
    <string name="app_person_liable_str">应用责任人</string>
    <string name="build_unit_str">建设    单位</string>
    <string name="contact_phone_str">联系    电话</string>
    <string name="support_info_str">支持信息</string>
    <string name="contract_unit_str">承建单位</string>
    <string name="operation_phone_str">运维电话</string>
    <string name="operation_manual_str">操作手册</string>
    <string name="app_operation_manual_str">应用操作手册.pdf</string>
    <string name="app_more_str">更多来自此应用责任人的App</string>
    <string name="show_all_str">显示全部</string>
    <string name="full_comment_str">满分5分</string>
    <string name="progress_comment_str">进行评论</string>
    <string name="comment_str">总体评价</string>
    <string name="choiceness_app_str">精选应用</string>
    <string name="installation_essential_str">装机必备</string>
    <string name="all_person_need_str">使用排名</string>
    <string name="search_str">搜索</string>
    <string name="add_section_str">添加版块</string>
    <string name="open_str">打开</string>
    <string name="host_app_str">热门应用</string>
    <string name="shift_position_str">拖拽调整顺序</string>
    <string name="home_page_show_str">首页显示</string>
    <string name="hint_update_str">暂无可更新应用</string>
    <string name="hint_uninstall_str">暂无可删除应用</string>
    <string name="parameter_error">参数错误</string>

    <string name="load_str">加载</string>

    <string name="unused_str">暂未开放</string>

    <string name="apply_str">申请</string>
    <string name="reject_str">已驳回</string>
    <string name="review_str">审核中</string>
    <string name="edit_app">编辑</string>
    <string name="del_str">删除</string>
    <string name="my_app">我的应用</string>
    <string name="comment_text_str">评论</string>
    <string name="current_home_disappear">(当前首页不显示)</string>
    <string name="recover_default_set">恢复默认设置</string>
    <string name="app_store">应用仓库V1.0.0</string>
    <string name="about_str">关于</string>
    <string name="development_company_str">开发公司: 奥尔特云(深圳)智慧科技有限公司</string>


    <string name="time_just">刚刚</string>
    <string name="time_min">分钟前</string>
    <string name="time_hour">小时前</string>
    <string name="time_day">天前</string>
    <string name="time_week">周前</string>
    <string name="time_mon">月前</string>
    <string name="time_year">年前</string>
    <string name="time_yesterday">昨天</string>
    <string name="time_before_yesterday">前天</string>
    <string name="dialog_ok">是</string>

    <string name="dialog_no">否</string>
    <string name="del_or_not">是否删除</string>
    <string name="del_suc">删除成功</string>
    <string name="app_info">应用详情</string>
    <string name="del_module_tip">确定删除当前版块?</string>
    <string name="introduce_str">介绍</string>
    <string name="all_app_count_show">共%s个，显示全部</string>
    <string name="all_app_count">共%s个</string>
    <string name="month_new">当月最新</string>
    <string name="module_title">板块标题</string>
    <string name="input_module_title_str">请输入板块新名称</string>
    <string name="change_module_name">修改版块名称</string>
    <string name="restore_tip">恢复初始化版块的数据，会丢失自定义版块的数据</string>
    <string name="delete_module_tip">确定删除该版块</string>
    <string name="app_apply">应用申请</string>
    <string name="submit_app_apply">提交申请</string>
    <string name="submit_suc">提交成功</string>
    <string name="apply_reason">添加申请理由…</string>
    <string name="review_feedback">审核意见</string>
    <string name="resubmit">重新提交</string>
    <string name="times">次</string>
    <string name="use_scope">使用范围</string>
    <string name="all_depart">所有部门</string>
    <string name="build_company">建设单位</string>
    <string name="more_app_from_developer">来自应用责任人更多APP</string>
    <string name="search_history_str">搜索历史</string>
    <string name="no_app_search">没有搜索到相关应用</string>
    <string name="input_app_name">请输入应用名称</string>
    <string name="search_text_res">搜索\"%s\"结果</string>
    <string name="module_name_lenght_not_use">模块名称不能大于%s个字符,请修改</string>
    <string name="please_input_module_name">请输入模块名</string>
    <string name="module_name_not_pre_num">模块名不能以数字开头，请重新输入</string>
    <string name="module_name_not_contain_spical_char">模块名不能包含特殊字符，请重新输入</string>
    <string name="get_app_info">获取应用信息</string>
    <string name="has_added_app">已添加该应用</string>
    <string name="dialog_cancel">取消</string>
    <string name="button_ok">确认</string>
    <string name="base_cancel">取消</string>
    <string name="tip">提示</string>
    <string name="loading">加载中</string>
    <string name="app_name">警务通</string>
    <string name="edit">编辑</string>
    <string name="download">下载</string>
    <string name="base_install">安装</string>

</resources>
