<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_FAFFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16sp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:text="@string/module_title"
            android:textColor="@color/color_1A1A1A"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:minHeight="30dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/color_666666"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/input_module_title_str"
            android:background="@drawable/edittext_bg_selector"
            android:textSize="14sp"
            android:textCursorDrawable="@drawable/color_cursor"/>
        <RelativeLayout
            android:id="@+id/all_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/confirm_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:textColor="@color/main_color"
                android:textSize="14sp"
                android:background="@drawable/bg_click"
                android:layout_marginRight="5dp"
                android:paddingRight="@dimen/margin_left_16"
                android:paddingLeft="@dimen/margin_left_16"
                android:text="@string/button_ok"/>

            <TextView
                android:id="@+id/cancle_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="@color/color_666666"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_toLeftOf="@id/confirm_btn"
                android:paddingRight="@dimen/margin_right_16"
                android:paddingLeft="@dimen/margin_left_16"
                android:background="@drawable/bg_click"
                android:text="@string/base_cancel"/>
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>