<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="0dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:layout_width="67dp"
                android:layout_height="67dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/launch_icon" />

            <TextView
                android:id="@+id/version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="27dp"
                android:gravity="center"
                android:text="@string/app_store"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/checkupdate_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="检查更新"
                android:visibility="gone"
                android:textColor="@color/main_color"
                android:textSize="16dp" />
            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/development_company_str"
                    android:textSize="12sp"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="26dp"/>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>